[project]
name = "DocPassGen"
version = "0.1.0"
description = "Simple CLI password generator"
authors = [
    { name="TheDocingEast", email="kirillporubov1@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
passgen = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
